k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: ghcr.io/bayedamethiam/technical-test-devops/secret-message-api:latest
        ports:
        - containerPort: 8000 
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

apiVersion: v1
kind: Service
metadata:
  name: api-service 
  labels:
    app: api
spec:
  ports:
    - port: 8000 
      targetPort: 8000
  selector:
    app: api
  type: ClusterIP
